--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "aws-sdk": "^2.1426.0",
         "axios": "^1.4.0",
         "cheerio": "^1.0.0-rc.12",
+        "connect-mongodb-session": "^3.1.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.18.2",
@@ -24,6 +25,8 @@
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
         "puppeteer": "^20.9.0",
+        "slugify": "^1.6.6",
+        "unidecode": "^0.1.8",
         "uuid": "^9.0.0"
     }
 }
