--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
         "puppeteer": "^20.9.0",
+        "shortid": "^2.2.16",
         "slugify": "^1.6.6",
         "unidecode": "^0.1.8",
         "uuid": "^9.0.0"
